[gd_scene load_steps=21 format=3 uid="uid://hup2o1jqeowh"]

[ext_resource type="Script" uid="uid://dhhgrew644rw1" path="res://entidades/inimigos/inimigo_base.gd" id="1_1h2o1"]
[ext_resource type="Texture2D" uid="uid://csw7l3upoxp30" path="res://entidades/inimigos/elemental/elemental_sprites.png" id="2_s7a4r"]
[ext_resource type="Texture2D" uid="uid://core4tlo55k3o" path="res://entidades/inimigos/elemental/seed_sprites.png" id="3_n1lpv"]
[ext_resource type="PackedScene" uid="uid://c1vmgts34kvxx" path="res://entidades/inimigos/EntityInfo.tscn" id="5_n1lpv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_638qs"]
atlas = ExtResource("2_s7a4r")
region = Rect2(512, 128, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w46tp"]
atlas = ExtResource("2_s7a4r")
region = Rect2(512, 256, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_22g48"]
atlas = ExtResource("2_s7a4r")
region = Rect2(512, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_piw37"]
atlas = ExtResource("3_n1lpv")
region = Rect2(256, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tacl"]
atlas = ExtResource("3_n1lpv")
region = Rect2(256, 128, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj0aw"]
atlas = ExtResource("3_n1lpv")
region = Rect2(512, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpsod"]
atlas = ExtResource("3_n1lpv")
region = Rect2(512, 128, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgf2e"]
atlas = ExtResource("3_n1lpv")
region = Rect2(512, 256, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dff4e"]
atlas = ExtResource("2_s7a4r")
region = Rect2(0, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlvbp"]
atlas = ExtResource("2_s7a4r")
region = Rect2(0, 128, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gti5"]
atlas = ExtResource("2_s7a4r")
region = Rect2(0, 256, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbux5"]
atlas = ExtResource("2_s7a4r")
region = Rect2(256, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xruxq"]
atlas = ExtResource("2_s7a4r")
region = Rect2(256, 128, 256, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_3om8o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_638qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w46tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22g48")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_piw37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tacl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj0aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpsod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgf2e")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dff4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlvbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gti5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbux5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xruxq")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dff4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlvbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gti5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbux5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xruxq")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5gjrn"]
radius = 50.0
height = 500.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n1lpv"]
radius = 40.0
height = 100.0

[node name="Elemental" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_1h2o1")
metadata/_custom_type_script = "uid://dhhgrew644rw1"
metadata/hostile = true

[node name="EntityInfo" parent="." instance=ExtResource("5_n1lpv")]
visible = false
offset_top = -100.0
offset_bottom = -100.0

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-65, -45)
sprite_frames = SubResource("SpriteFrames_3om8o")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.359053

[node name="CollisionArea" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -45)
polygon = PackedVector2Array(-4, 53, 16, 30, 8, -10, -16, -10, -23, 30)

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(-150, -50)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5gjrn")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-50, -40)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n1lpv")

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[node name="AggroTimer" type="Timer" parent="."]
one_shot = true
